Hack to get the Java 16 and 17 builds passing.