@@ -279,6 +279,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M5</version>
             <configuration>
              <!-- Don't allow test to run for more than 30 minutes -->
               <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
@@ -441,7 +442,7 @@
       </properties>
     </profile>
     <profile>
-      <id>java11+</id>
+      <id>java11</id>
       <activation>
         <jdk>[11,)</jdk>
       </activation>
@@ -451,6 +452,26 @@
              but the packages defined in https://docs.oracle.com/javase/8/docs/api/ are in the unnamed module."  -->
         <maven.javadoc.skip>true</maven.javadoc.skip>
       </properties>
+    </profile>
+    <profile>
+      <id>java16</id>
+      <activation>
+        <jdk>[16,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>
+                --illegal-access=permit
+                --add-opens java.base/java.lang=ALL-UNNAMED                     
+              </argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
